使用说明修改

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -49,8 +49,8 @@
      *      "recharged_times": 0,
      *      "union_id": "oj7QN1cI4TCKVcSB0cXYj6q-GoPk"
      *  },
-     *  "err": 0,
-     *  "msg": "请求成功"
+     *  "err": 0, //非0授权失败
+     *  "msg": "请求成功" //用户取消,用户拒绝授权,返回
      *  }
      */
     function weixinLogin() {
